@@ -1,3 +1,11 @@
+2002-08-03  Andrew Cagney  <cagney@redhat.com>
+
+	* m68hc11-tdep.c (m68hc11_pseudo_register_read): Replace
+	m68hc11_fetch_pseudo_register.
+	(m68hc11_pseudo_register_write): Replace
+	m68hc11_store_pseudo_register.
+	(m68hc11_gdbarch_init): Update.
+
 Fri Aug  2 15:53:50 2002  Andrew Cagney  <cagney@redhat.com>
 
 	* gdbarch.sh: Include "gdb_string.h".
